# llm-eval-harness

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  eval.yml
MEMORY/: core_decisions_ai.md  core_decisions_human.md  full_history_ai.md  full_history_human.md
docs/: architecture.md  calibration_format.md  dataset-format.md
eval_harness/: __init__.py  calibration.py  cli.py  comment.py  dataset.py  drift.py  io_utils.py  judge.py  markdown.py  pytest_plugin.py  runner.py  runs.py
examples/: __init__.py  drift_report.py  judge_calibration_stub.py  pytest_eval.py  regression_run_and_diff.py
fixtures/: calibration.jsonl  demo_baseline.json  demo_current.json  sample_factuality_v1.jsonl
fixtures/drift/: golden_inputs.jsonl  shifted.jsonl
scripts/: capture_demo.py  capture_demo.sh
tests/: test_architecture_doc.py  test_calibration.py  test_calibration_threshold_validation.py  test_capture_demo_smoke.py  test_cli_atomic_out.py  test_cli_diff_format.py  test_cli_error_translation.py  test_cli_judge_alias.py  test_cli_list.py  test_cli_list_out.py  test_cli_run.py  test_comment.py  test_dataset_format.py  test_drift.py  test_examples_smoke.py  test_io_utils_atomic_write.py  test_judge.py  test_judge_max_tokens_validation.py  test_markdown.py  test_mypy_clean.py  test_public_surface.py  test_py_typed_marker.py  test_pytest_plugin.py  test_readme_defaults_snapshot.py  test_readme_snapshot.py  test_runner.py  test_runs.py  test_tag_filter.py  test_validate.py  test_workflows_concurrency.py  test_workflows_timeout_minutes.py  test_workflows_yaml_parseable.py
