[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "eval-harness"
version = "0.0.1"
description = "Reusable LLM eval framework: golden datasets, LLM-as-judge with calibration, regression runner, pytest plugin, and PR-level eval diffs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "JT McHorse", email = "jmchorse.tech@gmail.com" }]
keywords = ["llm", "evals", "testing", "anthropic", "regression"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]

# The dataset layer is intentionally dependency-free so it can be imported
# in environments without API keys, in CI sandboxes, and inside other repos
# that consume the harness as a library.
dependencies = []

[project.optional-dependencies]
# The judge wrapper requires the Anthropic SDK at run-time only when the live
# backend is used. Tests substitute a deterministic stub and don't need this.
judge = [
  "anthropic>=0.32",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.5",
]

[project.scripts]
eval-harness = "eval_harness.cli:main"

[project.entry-points.pytest11]
# Pytest plugin registration (#5). Anyone with eval-harness installed
# can write `@pytest.mark.eval(...)` on a test and the plugin parametrizes
# the test once per row in the cited dataset.
eval_harness = "eval_harness.pytest_plugin"

[project.urls]
Repository = "https://github.com/jt-mchorse/llm-eval-harness"
Issues    = "https://github.com/jt-mchorse/llm-eval-harness/issues"

[tool.hatch.build.targets.wheel]
packages = ["eval_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra -q"
markers = [
  "eval(suite, dataset, answer_source, judge_backend, threshold=0.6, rubric=None): run as one eval item per dataset row (see eval_harness.pytest_plugin).",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT"]
ignore = ["E501"]
